test/should_not_compile/reserved_datdesc.sml
signature S = sig
  datatype t = it
end;
